--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 
   <!-- ضع العنوان الخاص بك هنا  -->
   <title> غير هذا النص </title>
-  <meta name="title" content="غير هذا النص">
-  <meta property="twitter:title" content="غير هذا النص">
-  <meta property="og:title" content="غير هذا النص">
+  <meta name="title" content="login">
+  <meta property="twitter:title" content="login">
+  <meta property="og:title" content="login">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
-  <meta name="description" content="غير هذا النص">
-  <meta property="og:description" content="غير هذا النص">
-  <meta property="twitter:description" content="غير هذا النص">
+  <meta name="description" content="login">
+  <meta property="og:description" content="login">
+  <meta property="twitter:description" content="login">
 
   <!-- ضع الرابط المرفوع عليه الموقع -->
-  <meta property="og:url" content="ضع الرابط كامل">
-  <meta property="twitter:url" content="ضع الرابط كامل">
+  <meta property="og:url" content="https://newcoluore.github.io/">
+  <meta property="twitter:url" content="https://newcoluore.github.io/">
 
   <!-- رابط الصورة المعروضة في اللينك -->
   <meta property="og:image" content="رابط الصورة">
