--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://www.google.com"; // أدخل الرابط الخاص بك هنا
+    const URL = "https://one.on3vip.online/?utm_medium=c52d5ec64c19527b182e683f4bb8d2abfc06856b&utm_campaign=alaa// أدخل الرابط الخاص بك هنا
     const LIMIT = "2"; // أدخل عدد التسجيل المتاح
     // const self = true
 
